Update quotes and styles

--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/expanded/speech.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/expanded/speech.scss
@@ -4,8 +4,16 @@
 	Style name: Khy'eras (version 1.0)
 ------------------------------------------------------------------*/
 
+.bbcode-character-speech[data-name='Aleida Farlight'] {
+	color: #33b873;
+}
+
 .bbcode-character-speech[data-name='Amalia Hahn'] {
 	color: #bf0040;
+}
+
+.bbcode-character-speech[data-name='Amelia Varanger'] {
+	color: #ffa07a;
 }
 
 .bbcode-character-speech[data-name='Andrea Winslow'] {
@@ -28,6 +36,10 @@
 	color: #cf7d1f;
 }
 
+.bbcode-character-speech[data-name='Bracken Olivefrost'] {
+	color: #69bdd2;
+}
+
 .bbcode-character-speech[data-name='Braschanka Cloudbreaker'] {
 	color: #cd7054;
 }
@@ -41,7 +53,7 @@
 }
 
 .bbcode-character-speech[data-name='Chloe Rasori'] {
-	color: #99ee60;
+	color: #60eeb7;
 }
 
 .bbcode-character-speech[data-name='Ciaran'] {
@@ -132,7 +144,7 @@
 	color: #40bfbf;
 }
 
-.bbcode-character-speech[data-name='Kira Lenora'] {
+.bbcode-character-speech[data-name='Kira'] {
 	color: #8000ff;
 }
 
