--- a/khyeras/_dev/styles/khyeras_v1/template/partials/header_content.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/header_content.html
@@ -1,115 +1,131 @@
 {% set quotes = [
 	{
 		text : 'Someone had once called Toa impulsive and while she had responded to this by slapping them in the face in retrospect they may have had a point.',
-		author : '<a href="./viewtopic.php?f=15&amp;p=296#p296">Toa</a>'
+		author : '<a href="./viewtopic.php?p=296#p296">Toa</a>'
 	},
 	{
 		text : 'When the smoke vanished from the falling entity, a cat had taken the place of the hawk. Silvery coat, with black spots and large, tufted ears; Loxiel\'s cat form was the only chance he had at surviving this fall. A cat always landed on its feet... right?',
-		author : '<a href="./viewtopic.php?f=15&amp;t=143#p526">Loxiel</a>'
+		author : '<a href="./viewtopic.php?p=526#p526">Loxiel</a>'
 	},
 	{
 		text : '"I... uh. I guess you saw that." Cass began nervously, offering the other a sheepish smile. "You\'re shorter than I thought."',
-		author : '<a href="./viewtopic.php?f=13&amp;t=138&amp;p=542#p522">Cassian Thander</a>'
+		author : '<a href="./viewtopic.php?p=522#p522">Cassian Thander</a>'
 	},
 	{
 		text : 'With a shake of his now massive head, Harroc planted his paws firmly and let loose a bone-rattling howl. The mournful wail seemed to pierce through the jungle and leave silence behind. After several moments of silence, far off replies could be heard. They wove together and became uncountable before finally fading away.',
-		author : '<a href="./viewtopic.php?f=14&amp;t=124&amp;p=548#p430">Harroc Crownegrove</a>'
+		author : '<a href="./viewtopic.php?p=430#p430">Harroc Crownegrove</a>'
 	},
 	{
 		text : '"Well, can\'t pretend I ever knew Lilian all that well, but I dare to say you\'re far more of a looker than she ever was; if you\'re still needing comfort in the dead of night, I\'ve received splendid reviews about my bedside." Was it inappropriate? Maybe. Would Katarya disapprove of Val leaning over the counter with far more spirit than before and eyeing her black outfit up and down? Almost certainly, but try explaining good manners and empathy to a bard.',
-		author : '<a href="./viewtopic.php?f=12&amp;t=122#p468">Val Bellamy</a>'
+		author : '<a href="./viewtopic.php?p=468#p468">Val Bellamy</a>'
 	},
 	{
 		text : '"If you\'re so berry talented, then lettuce hear you sweeten your tune to plumb the depths of our hearts as well as our coin purses, hmm? Give it another try, darling, and this time try to make it a-peel-ing instead of appalling." There was a lilt to his accent, an obvious blending of vowels and lingering on certain consonants that marked him just as much from Ninraih as his stature and his wings, as his color and flair marked him as a glorious jungle flower far from home.',
-		author : '<a href="./viewtopic.php?f=12&amp;t=125#p441">Roan Mohan</a>'
+		author : '<a href="./viewtopic.php?p=441#p4411">Roan Mohan</a>'
 	},
 	{
 		text : '"Did you know," Mara began, abruptly breaking the silence, "there is a love story about Ristgir and Ny\'tha? It was said that Ixaziel did tell them to rule the heavens equally, instructing them to march across the sky in an endless parade of day into night, night into day. They follow after one another, always just out of reach."',
-		author : '<a href="./viewtopic.php?f=14&amp;t=124#p711">Mara Whitewood</a>'
+		author : '<a href="./viewtopic.php?p=711#p711">Mara Whitewood</a>'
 	},
 	{
 		text : '"Did he draw you in with some tale about his \'dear old nan\' or was he just pathetic?" She opened her eyes wide, innocently. "Artemis can be rather manipulative, so I do hope you\'re staying on your toes."',
-		author : '<a href="./viewtopic.php?f=12&amp;t=162&start=10#p771">Ksenia</a>'
+		author : '<a href="./viewtopic.php?p=771#p771">Ksenia</a>'
 	},
 	{
 		text : '"Mm," she hummed, her distracted tone verging on dismissive. Peering sidelong at her Lanae continued, adding more softly, "Hide while you can, but like calls to like; your fangs are not invisible either - to those who know how to look."',
-		author : '<a href="./viewtopic.php?f=11&amp;p=860#p860">Lanae Ofnowhere</a>'
+		author : '<a href="./viewtopic.php?p=860#p860">Lanae Ofnowhere</a>'
 	},
 	{
 		text : 'Swearing colourfully in his mother tongue, D&aacute;ire tried to wriggle out from under the flailing limbs of the wizard, was the man drunk? After managing to scramble to his feet, he could detect no lingering scents of stale liquor on the man, who was still on the ground. No longer flailing, just sitting quietly, squinting up at D&aacute;ire as he watched him.',
-		author : '<a href="./viewtopic.php?f=12&amp;t=169#p874">D&aacute;ire</a>'
+		author : '<a href="./viewtopic.php?p=874#p874">D&aacute;ire</a>'
 	},
 	{
 		text : 'I hate coming up with smart ass comments and not being able to use them, so instead, I made my way over to the fallen woman and said, "I believe the store is closed. You may want to try back during normal business hours." And I reached out a hand to offer her a hand up.',
-		author : '<a href="./viewtopic.php?f=12&amp;t=48#p110">Victor Sage</a>'
+		author : '<a href="./viewtopic.php?p=110#p110">Victor Sage</a>'
 	},
 	{
 		text : '"What do you want? Congratulations on your vocal performance last night? Gotta say, the soprano screams at about three in the morning knocked me right off my bedroll. And the fortissimo groaning set it off so nicely, I hardly have room to mention that really lovely aria that seemed to consist of Artemis\'s name - and every idol and eidolon, ever."',
-		author : '<a href="./viewtopic.php?f=12&amp;t=168&start=20#p910">Ksenia</a>'
+		author : '<a href="./viewtopic.php?p=910#p910">Ksenia</a>'
 	},
 	{
 		text : 'Maggie seemed kind and proud. A formidable old woman with a steely resolve and a warm heart. She might practice the Arts rather then wield a sword, but in his eyes she held every caliber of a knight.',
-		author : '<a href="./viewtopic.php?f=12&amp;t=157&start=20#p990">Arthur Claymore</a>'
+		author : '<a href="./viewtopic.php?p=990#p990">Arthur Claymore</a>'
 	},
 	{
 		text : 'Reputation was the only real currency that mattered when you dealt in the lawless and dangerous. Gold can be taken, forged, or simply never appear. Reputation took time to build, and could be destroyed in a moment. A man without it had less than the alleyways; they could be relied upon to stink.',
-		author : '<a href="./viewtopic.php?f=12&amp;t=177&amp;p=1190#p1190">Artemis Black</a>'
+		author : '<a href="./viewtopic.php?p=1190#p1190">Artemis Black</a>'
 	},
 	{
 		text : '"Hey, no pushing now." He chided two kids as they tried to get closer. He stepped aside regardless; children should have fun; as much fun as is possible, especially since they were Human and would be dead soon anyway. Raen shrugged.',
-		author : '<a href="./viewtopic.php?f=12&amp;t=188#p1278">Raen Silver</a>'
+		author : '<a href="./viewtopic.php?p=1278#p1278">Raen Silver</a>'
 	},
 	{
 		text : 'It was seldom the wolf was wrong in her assessments of threats, her extrasensory perceptions bordering on otherworldly. Khan had to wonder if she possessed the magic he had been robbed of, hundreds of years ago. It was a terrible thing to remember what was lost, particularly when it was intertwined with one\'s literal being.',
-		author : '<a href="./viewtopic.php?f=17&amp;t=194#p1426">Galynhun-Khan Tinnudir</a>'
+		author : '<a href="./viewtopic.php?p=1426#p1426">Galynhun-Khan Tinnudir</a>'
 	},
 	{
 		text : 'The wolf had started bouncing around excitedly by this point and he decided it was either a very lost companion to some sort of ranger, or had some terrible brain parasite. He\'d heard of those once, they lived in the water. It\'s why you always boiled it.',
-		author : '<a href="./viewtopic.php?f=15&amp;t=205#p1626">Malcolm Rhodes</a>'
+		author : '<a href="./viewtopic.php?p=1626#p1626">Malcolm Rhodes</a>'
 	},
 	{
 		text : 'When the crafter started showing all the signs of a creator possessed, Artemis knew he\'d chosen correctly. Most people who made things from thin air tended to have similar monologues when approached with an opportunity. It meant they weren\'t paying any attention at all to silly details like their own safety or getting paid a fair amount.',
-		author : '<a href="./viewtopic.php?f=12&amp;t=132#p565">Artemis Black</a>'
+		author : '<a href="./viewtopic.php?p=565#p565">Artemis Black</a>'
 	},
 	{
 		text : 'The flying squirrel didn\'t respond. As usual. But it did happily take a few berries from her as she snacked on her way. Tika thought it was funny to feed berries to Tok, as the berries stained the creatures mouth and made her look carnivorous. Honestly, a carnivorous flying squirrel was a scary concept!',
-		author : '<a href="./viewtopic.php?t=199#p1645">Tika</a>'
+		author : '<a href="./viewtopic.php?p=1645#p1645">Tika</a>'
 	},
 	{
 		text : 'She picked up one that looked promising - "Pyromancy for Halfwits" was the title, blazoned across a bright yellow cover. She tucked it under her arm and kept looking.',
-		author : '<a href="./viewtopic.php?f=15&amp;t=240#p1965">Roridula Lunatus</a>'
+		author : '<a href="./viewtopic.php?p=1965#p1965">Roridula Lunatus</a>'
 	},
 	{
 		text : 'If nothing else, at least admiring the buildings were interesting. He couldn\'t help but wonder if Cecilia had lived in one of these many houses, or maybe some other one of the many Idols, considering the absolute prestige in this area. Or did exciting things happen to ordinary folk? "Maybe even... someone like me?"',
-		author : '<a href="./viewtopic.php?f=12&amp;t=275#p2217">Calem Sabathe</a>'
+		author : '<a href="./viewtopic.php?p=2217#p2217">Calem Sabathe</a>'
 	},
 	{
 		text : '"My teacher calls me Dez, and I\'m looking for a performer." The dragon gave his best smile following his words.</p><p>"Oh really aren\'t we all? Isn\'t that right soldiers?" The three other warriors nodded in unison. The youngest gave an extra wink. "Right, but you look like a thief to me. So watch yourself kid. We take pride in our job. Stay out of trouble and move along."',
-		author : '<a href="./viewtopic.php?f=12&amp;t=250#p2055">Dessrexin</a>'
+		author : '<a href="./viewtopic.php?p=2055#p2055">Dessrexin</a>'
 	},
 	{
 		text : 'He doubted very much his master would be upset if Kit died of an infected wound. If anything, he\'d probably beat Kit\'s cold corpse for the inconvenience.',
-		author : '<a href="./viewtopic.php?f=30&amp;t=293&amp;p=2472#p2472">Kit Heron</a>'
+		author : '<a href="./viewtopic.php?p=2472#p2472">Kit Heron</a>'
 	},
 	{
 		text : '"Let no man stand before a Frost woman and show we deserve anything other than respect, beyond all."',
-		author : '<a href="./viewtopic.php?f=12&amp;t=215&start=10#p1726">Katarya Frost</a>'
+		author : '<a href="./viewtopic.php?p=1726#p1726">Katarya Frost</a>'
 	},
 	{
 		text : '"Tell me the absolute truth... unless it\'s bad news then lie to me and I shall go and drink myself to death, lamenting the best thing I had going for me; being absolutely gorgeous."',
-		author : '<a href="./viewtopic.php?f=12&amp;t=291&amp;p=2536#p2515">Raen Silver</a>'
+		author : '<a href="./viewtopic.php?p=2515#p2515">Raen Silver</a>'
 	},
 	{
 		text : 'Quite a few faces turned from their food to look at her - and in that moment, June started to understand why this job might not have been for everyone. Some of these guys looked like they wrestled bears (wait, there were a few sailors here - maybe they wrestled octo-bears?) just for the fun of it.',
-		author : '<a href="./viewtopic.php?f=12&amp;t=296#p2480">Spirits of Adventure</a>'
-	},
-	{
-		text : 'Quite a few faces turned from their food to look at her - and in that moment, June started to understand why this job might not have been for everyone. Some of these guys looked like they wrestled bears (wait, there were a few sailors here - maybe they wrestled octo-bears?) just for the fun of it.',
-		author : '<a href="./viewtopic.php?f=12&amp;t=296#p2480">Spirits of Adventure</a>'
+		author : '<a href="./viewtopic.php?p=2480#p2480">Spirits of Adventure</a>'
 	},
 	{
 		text : '"Put me to work," she said, a little tonelessly. "I have some skill with a hammer. Not much. I am strong."</p><p>With this glowing assessment of her own capabilities complete, she stood and waited for her orders.',
-		author : '<a href="./viewtopic.php?f=12&amp;t=270&amp;start=20#p2513">Jourin Argall</a>'
+		author : '<a href="./viewtopic.php?p=2513#p2513">Jourin Argall</a>'
+	},
+	{
+		text : '"Kess- Ksenia, I have had this at least seven times, and only vomited twice. Those are great odds." Ksenia put her head against her fist, shaking her head.',
+		author : '<a href="./viewtopic.php?p=2675#p2675">Artemis Black</a>'
+	},
+	{
+		text : 'He had often come to the narrows as it was rarely travelled by others and so its rich waters made an ideal place to hunt for food - large schools of fish made a nice change in his diet. Not to mention there was something exhilarating even after nearly three centuries of gliding just above the water, seeing your reflection shimmer below you, and to feel the cool spray of the salt water as he dipped his head below to catch something. It was a little thing, silly really, but he still enjoyed it even as he was becoming too old for such things.',
+		author : '<a href="./viewtopic.php?p=2817#p2817">Itzcohuatl</a>'
+	},
+	{
+		text : '"Cap\'n! It\'s a dragon!" Logan hollered down, fear in his voice.</p><p>Finn\'s head snapped up. Logan\'s cry told him that the man was serious and not drunk at all. The men fell silent and looked at Finn. He had just opened his mouth to tell them to man the ballistae, when the Queen\'s prow entered between the first pillars.',
+		author : '<a href="./viewtopic.php?p=2832#p2832">Finn Roberts</a>'
+	},
+	{
+		text : '"The night is always darkest before the dawn.<br />Creatures wait in the shadows seeking victims unwary.<br />Keep your hearts strong however for the seventh son\'s rest is never.<br />The night is always darkest before the dawn.<br />Blackest hearts prowl the night seeking to give all a fright.<br />Keep your wits about you and you shall see it thru.<br />The night is always darkest before the dawn.<br />When the rays of Ristgir touch the ground all will be profound.<br />Worry not when night comes again the seventh son\'s work is about to begin.<br />The night is always darkest before the dawn."',
+		author : '<a href="./viewtopic.php?p=2151#p2151">The Capuche sisters</a>'
+	},
+	{
+		text : '"If your here to save the day your late, It\'s already well past sunset. Thanks for believing in my talents with traps though. You literally put your lives in my hands." Every word dripped sarcasm though he wondered if the mortals picked up on it.',
+		author : '<a href="./viewtopic.php?p=2799#p2799">Horus</a>'
 	}
 ] %}
 
