--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_viewtopic.scss
@@ -176,11 +176,17 @@
 			}
 		}
 		.bbcode-divider {
-			margin: 42px auto;
+			margin: 20px auto 40px auto;
 			max-width: 75%;
 			border-bottom: 1px dashed $color-01;
 			border-top: 1px dashed $color-01;
 			position: relative;
+			&, .bbcode-divider-inner {
+				display: block;
+			}
+			& + br, & + br + br {
+				display: none;
+			}
 			.icon {
 				@include position($type: absolute, $top: 0, $right: 0, $bottom: 0, $left: 0, $z: 1);
 				margin: auto;
